--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
+    "crypto": "^1.0.1",
+    "date-fns": "^2.30.0",
+    "exceljs": "^4.4.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.17.3",
+    "googleapis": "^128.0.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.0",
     "mysql2": "^3.6.2",
+    "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "sequelize": "^6.33.0"
   },
   "devDependencies": {
